fix positioning of images in CSS for better alignment

--- a/index.css
+++ b/index.css
@@ -152,16 +152,16 @@ nav .links a:hover::after {
 
 #img-2{
     top: 420px;
-    right: 150px;
+    right: 141.5px;
 }
 
 #img-3{
-    left: 460px;
+    left: 458px;
     top: 420px;
 }
 
 #img-4{
-    left: 770px;
+    left: 766px;
     top: 420px;
 }
 
